# personal-setup

./: .gitignore  AGENTS.md  README.md  SETUP-GUIDE.md  check_sshd_access.py  check_torch_cuda.py  collect-secrets.py  collect-userdata.py  get_appointments.py  media_transcribe.py  packages-aur.txt  packages-native.txt  probe-hardware.fish  probe-hardware.py  pyproject.toml  secrets.age  services-system.txt  services-user.txt  setup.fish  setup.py  tool_runtime.py  uv-tools.txt  vscode-extensions.txt
chezmoi-source/: dot_aider.conf.yml  dot_bashrc  dot_tmux.conf  dot_zshrc  private_dot_gitconfig  run_after_50-apply-ufw-rules.sh.tmpl  run_onchange_after_50-apply-ufw-rules.sh.tmpl
chezmoi-source/dot_claude/: CLAUDE.md  hookify.check-github-before-debugging.local.md  settings.json
chezmoi-source/dot_claude/hooks/: executable_sudo-output-injector.sh
chezmoi-source/dot_config/alacritty/: alacritty.toml
chezmoi-source/dot_config/fish/: config.fish  private_fish_variables
chezmoi-source/dot_config/kitty/: current-theme.conf  kitty.conf
chezmoi-source/dot_config/niri/: noctalia.kdl
chezmoi-source/dot_config/noctalia/: colors.json  plugins.json  settings.json  user-templates.toml
chezmoi-source/dot_config/spotifyd/: spotifyd.conf
chezmoi-source/dot_config/yay/: config.json
chezmoi-source/dot_continue/: config.yaml
chezmoi-source/private_dot_ssh/: private_config
system-config/: fstab.reference  sddm.conf
system-config/sysctl.d/: 50-intel-gpu-tools.conf
system-config/ufw/: user.rules  user6.rules
test-vm/: VM-ALTERNATIVES.md  requirements.txt  vm.py
(+25 files in other folders)
